// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<input
  class="wp-components-slider css-i96r7k"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="0"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;

exports[`props should render max 1`] = `
<input
  class="wp-components-slider css-i96r7k"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="50"
  min="0"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;

exports[`props should render min 1`] = `
<input
  class="wp-components-slider css-i96r7k"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="5"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;

exports[`props should render size 1`] = `
<input
  class="wp-components-slider css-9ftwce"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="0"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;

exports[`props should render value 1`] = `
<input
  class="wp-components-slider css-i96r7k"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="0"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;
